--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	</section>
 	<footer class="footer-section">
 		<p>Check out my links below :</p>
-		<a href="https://www.linkedin.com/in/hari-haran-01255a1a7 /" target="blank"><i class="fa-brands fa-linkedin-in"></i></a>
+		<a href="https://www.linkedin.com/in/hari-haran-01255a1a7/" target="blank"><i class="fa-brands fa-linkedin-in"></i></a>
 		<a href="https://t.me/Hari_k_157" target="blank"><i class="fa-brands fa-telegram"></i></a>
 		<a href="https://github.com/Hariharan23pr" target="blank"><i class="fa-brands fa-github-alt"></i></a>
 		<a href="https://wa.me/+916381359968" target="blank"><i class="fa-brands fa-whatsapp"></i></a>
