--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="row">
 			<div class="home-title col-lg-6">
 			<p class="main-title h1">I'm Hariharan</p>
-			<p class="title-para">I'm an Data analyst</p>
+			<p class="title-para">I'm an Junior Data analyst</p>
 		</div>
 		<div class="home-image col-lg-6">
 			<img src="./Me.jpg"   class="img-fluid home-image">
